Exercicios Opcionais: Linkando melhor as views

--- a/cp2-caelum-apostila/vota_prato/app/views/restaurantes/index.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/restaurantes/index.html.erb
@@ -18,8 +18,9 @@
 			<td>
 				<%= link_to 'Deletar', {action: 'destroy', id: restaurante}, {method: "delete"} %>
 			</td>
-
-
+			<td>
+			<%= link_to 'Editar', action: 'edit', id: restaurante %>
+			</td>
 		</tr>
 	<%end%>
 </table>
