--- a/cp2-caelum-apostila/vota_prato/app/views/restaurantes/show.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/restaurantes/show.html.erb
@@ -15,4 +15,6 @@
 <%= @restaurante.especialidade %>
 </p>
 
+<%= link_to 'Editar', action: 'edit', id: @restaurante %>
 
+<%= link_to 'Voltar', action: 'index' %>
