--- a/cp2-caelum-apostila/vota_prato/app/views/restaurantes/edit.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/restaurantes/edit.html.erb
@@ -1,8 +1,4 @@
 <h1>Editando Restaurantes</h1>
-<%= form_for @restaurante do |f| %>
-	Nome: <%= f.text_field :nome %><br/>
-	Endereço: <%= f.text_field :endereco %></br/>
-	Especialidade: <%= f.text_field :especialidade %><br/>
-<%= f.submit %>
-<%end%>
+
+<%= render partial: "form" %>
 <%= link_to 'Voltar', action: "index" %>
