pg 174 - Listando os comentários de um comentável

--- a/cp2-caelum-apostila/vota_prato/app/views/restaurantes/show.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/restaurantes/show.html.erb
@@ -19,7 +19,9 @@
 <b>Qualificações: </b><%= @restaurante.qualificacoes.count %><br/>
 <b>Preço médio: </b><%= @restaurante.qualificacoes.average(:valor_gasto) %><br/><br/>
 
-<%= link_to "Qualificar este restaurante", controller: "qualificacoes", action: "new", restaurante: @restaurante %>
+<%= link_to "Qualificar este restaurante", controller: "qualificacoes", action: "new", restaurante: @restaurante %><br><br>
+<%= comentarios @restaurante %>
+<%= novo_comentario @restaurante %>
 <%= link_to 'Editar', action: 'edit', id: @restaurante %>
 
 <%= link_to 'Voltar', action: 'index' %>
