--- a/cp2-caelum-apostila/vota_prato/app/views/layouts/application.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<ul>
+<% %w[restaurantes clientes qualificacoes].each do |controller_name| %>
+		<li>
+			<%= link_to controller_name, controller: controller_name %>
+		</li>
+	<%end%>
+</ul>
 <%= yield %>
 
 </body>
