[corrigido] Menu como partial

--- a/cp2-caelum-apostila/vota_prato/app/views/layouts/_menu_principal.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/layouts/_menu_principal.html.erb
@@ -1,7 +1,7 @@
 <ul>
-<% opcoes.each do |controller_name| %>
+<% %w[clientes qualificacoes restaurantes].each do |controller_name| %>
 <li>
 <%= link_to controller_name, controller: controller_name %>
 </li>
-<% end%>
+<%end%>
 </ul>
