[corrigido]pg 178 - Aplicando CSS para comentários

--- a/cp2-caelum-apostila/vota_prato/app/views/comentarios/_comentario.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/comentarios/_comentario.html.erb
@@ -1,5 +1,5 @@
 <p>
 	<%= comentario.conteudo %>
-	<%= link_to '(remover)', comentario, method: :delete %>
+	<%= link_to '(remover)', comentario, method: :delete, remote: true %>
 	</p>
 	
