pg 182 - Link de remover comentário usando AJAX

--- a/cp2-caelum-apostila/vota_prato/app/views/layouts/application.html.erb
+++ b/cp2-caelum-apostila/vota_prato/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
 <%= menu_principal %w(restaurantes clientes qualificacoes) %>
 </ul>
 <%= yield %>
-
+<script> 
+<%= yield :js %>
+</script>
+<script type="text/javascript">
+  	<%= yield :js %>
+</script>
 </body>
 </html>
