--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for(@cliente, remote: true) do |f| %>
+<% modal ||= false %>
+<% remote = modal ? true : false %>
+<%= form_for(@cliente, remote: remote, html: {role: :form, 'data-model' => 'cliente'}) do |f| %>
   <% if @cliente.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@cliente.errors.count, "error") %> prohibited this cliente from being saved:</h2>
@@ -11,15 +13,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, class: 'control-label' %><br>
+    <%= f.text_field :nome, class: 'form-control' %>
+	<span class="help-block"></span>
   </div>
-  <div class="field">
-    <%= f.label :idade %><br>
-    <%= f.number_field :idade %>
+  <div class="form-group">
+    <%= f.label :idade, class: 'control-label' %><br>
+	<%= f.number_field :idade, class: 'form-control' %>
+	<span class="help-block"></span>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit', class: 'btn btn-default' %>
   </div>
 <% end %>
