Fancybox funcionou, mas não exibiu o formulário

--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+<div id="novo_cliente_modal">
   <div class="field">
     <%= f.label :nome %><br>
     <%= f.text_field :nome %>
@@ -22,4 +23,6 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
+
