--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -25,4 +25,18 @@
 
 <br>
 
-<%= link_to 'New Cliente', new_cliente_path %>
+<b>Clientes (Guide Rails)</b>
+ 
+<ul id="clientes">
+<%= render @clientes %>
+</ul>
+ 
+<br>
+
+<%= form_for(@cliente, remote: true) do |f| %>
+  <%= f.label :nome %><br>
+  <%= f.text_field :nome %><br> 
+  <%= f.submit %>
+<% end %>
+<%= link_to 'Novo Cliente', "#novo_cliente_modal", :class=> "fancybox" %>
+
