--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -24,4 +24,4 @@
 
 <%= paginate @restaurantes %>
 </br>
-<%= link_to 'Novo', action: 'new' %>
+<%= link_to 'Novo', action: 'new', :class=> "fancybox" %>
