--- a/app/views/restaurantes/_form.html.erb
+++ b/app/views/restaurantes/_form.html.erb
@@ -5,7 +5,7 @@
 		<% end %>
 	</ul>
 <% end %>
-<%= form_for @restaurante, html: {multipart: true} do |f| %>
+<%= form_for(@restaurante, remote:true, html: {multipart: true}) do |f| %>
 	Nome:     		<%= f.text_field :nome %> <br>
 	Endereço: 		<%= f.text_field :endereco %><br>
 	Especialidade: 	<%= f.text_field :especialidade %><br>
