--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -24,4 +24,4 @@
 
 <%= paginate @restaurantes %>
 </br>
-<%= link_to 'Novo Restaurante', new_restaurante_path, id: "novo_restaurante", remote: true %>
+<%= link_to 'Novo Restaurante', new_restaurante_path, class: 'fancybox' %>
