--- a/app/views/comentarios/_form.html.erb
+++ b/app/views/comentarios/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comentario) do |f| %>
+<%= form_for(@comentario, remote: true) do |f| %>
   <% if @comentario.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comentario.errors.count, "error") %> prohibited this comentario from being saved:</h2>
