--- a/app/views/comentarios/index.html.erb
+++ b/app/views/comentarios/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Comentario', new_comentario_path %>
+<%= link_to 'New Comentario', new_comentario_path, class: 'fancybox' %>
