--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@qualificacao) do |f| %>
+<%= form_for(@qualificacao, remote: true) do |f| %>
   <% if @qualificacao.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@qualificacao.errors.count, "error") %> prohibited this qualificacao from being saved:</h2>
