Fancybox Restaurantes funcionando

--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -24,4 +24,4 @@
 
 <%= paginate @restaurantes %>
 </br>
-<%= link_to 'Novo Restaurante', new_restaurante_path, class: 'fancybox' %>
+<%= link_to 'Novo Restaurante', new_restaurante_path, remote: true %>
