--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'Novo Cliente', new_cliente_path, class: 'fancybox'  %>
+<%= link_to 'Novo Cliente', new_cliente_path, remote: true %>
