--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'Nova Qualificacao', new_qualificacao_path, class: "fancybox" %>
+<%= link_to 'Nova Qualificacao', new_qualificacao_path, class: "fancybox", remote: true %>
