--- a/app/views/qualificacoes/new.js.erb
+++ b/app/views/qualificacoes/new.js.erb
@@ -1,6 +1,5 @@
-console.log("new.js\n\n\n\n\n");
-
-
-$(document).ready(function() {
-  $("a.fancybox").fancybox();
+$.fancybox({
+    autoSize: true,
+    href: '/qualificacoes/new',
+    type: 'ajax'
 });
