Devise com helpers current_user entre outros

--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -1,4 +1,5 @@
 <ul>
+  <li><%= link_to "Página inicial", root_path %></li>
   <li><%= link_to "Clientes", clientes_path %></li>
   <li><%= link_to "Restaurantes", restaurantes_path %></li>
   <li><%= link_to "Qualificações", qualificacoes_path%></li>
