--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Qualificacao', new_qualificacao_path %>
+<%= link_to 'New Qualificacao', new_qualificacao_path, remote: true %>
