[erro]NoMethodError in Restaurante Controller

--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -26,6 +26,8 @@
 <%= link_to "Qualificar este restaurante", controller: "qualificacoes", action: "new", restaurante: @restaurante %><br><br>
 <%= comentarios @restaurante %>
 <%= novo_comentario @restaurante %>
+<% if can? :update, @restaurante %>
 <%= link_to 'Editar', action: 'edit', id: @restaurante %>
+<% end %>
 
 <%= link_to 'Voltar', action: 'index' %>
