--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -36,6 +36,6 @@
     <%= f.text_field :valor_gasto %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Salvar qualificação"%>
   </div>
 <% end %>
