--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -12,5 +12,5 @@
 
 <%= link_to "Nova qualificação", controller: "qualificacoes", action: "new", cliente: @cliente %>
 
-<%= link_to 'Edit', edit_cliente_path(@cliente) %> |
-<%= link_to 'Back', clientes_path %>
+<%= link_to 'Editar', edit_cliente_path(@cliente) %> |
+<%= link_to 'Voltar', clientes_path %>
