--- a/app/views/comentarios/new.html.erb
+++ b/app/views/comentarios/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Comentario</h1>
+<h1>Novo Comentário</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', comentarios_path %>
+<%= link_to 'Voltar', comentarios_path %>
