--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <% if @qualificacao.cliente %>
     <%= f.hidden_field 'cliente_id' %>
     <% else %>
