--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -2,14 +2,14 @@
 
 <h1>Qualificações</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Cliente</th>
       <th>Restaurante</th>
       <th>Nota</th>
       <th>Valor gasto</th>
-      <th colspan="3"></th>
+      <!--     <th colspan="3", align="center">Opções</th> -->
     </tr>
   </thead>
 
@@ -20,9 +20,9 @@
         <td><%= qualificacao.restaurante.nome %></td>
         <td><%= qualificacao.nota %></td>
         <td><%= valor_formatado(qualificacao.valor_gasto) %></td>
-        <td><%= button_to 'Mostrar', qualificacao, method: :get %></td>
-        <td><%= button_to 'Editar', edit_qualificacao_path(qualificacao), method: :get %></td>
-        <td><%= button_to 'Remover', qualificacao, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Mostrar', qualificacao, method: :get, class: "btn btn-default"  %></td>
+        <td><%= button_to 'Editar', edit_qualificacao_path(qualificacao), method: :get, class: "btn btn-default" %></td>
+        <td><%= button_to 'Remover', qualificacao, method: :delete, data: { confirm: 'Tem certeza?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= button_to 'Nova Qualificação', new_qualificacao_path, remote: true, method: :get %>
+<%= button_to 'Nova Qualificação', new_qualificacao_path, remote: true, method: :get, class: "btn btn-primary" %>
