--- a/app/views/qualificacoes/edit.html.erb
+++ b/app/views/qualificacoes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Qualificacao</h1>
+<h1>Editando Qualificação</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @qualificacao %> |
-<%= link_to 'Back', qualificacoes_path %>
+<%= link_to 'Mostrar', @qualificacao %> |
+<%= link_to 'Voltar', qualificacoes_path %>
