--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -18,6 +18,7 @@
         <td><%= cliente.idade %></td>
         <td><%= button_to 'Mostrar', cliente, method: :get, class: "btn btn-default"  %></td>
         <td><%= button_to 'Editar', edit_cliente_path(cliente), method: :get, class: "btn btn-default"  %></td>
+        <td><%= button_to 'Apagar', cliente, method: :delete, data: { confirm: 'Tem certeza?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
